# memesis

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  mise.cleanroom.toml  mise.toml  playground-memory-prune.html  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: migrate-to-codex-report.txt
.context/: CONTEXT-agentic-memory-blockers.md  CONTEXT-contradiction-resolution.md  CONTEXT-evolve-skill.md  CONTEXT-fts5-sanitization.md  CONTEXT-nlp-integration.md  CONTEXT-relationship-engine.md  CONTEXT-risk-register-fixes.md  CONTEXT-shared-llm-helper.md  CONTEXT-skill-redesign.md  CONTEXT-thread-retrieval.md  CONTEXT-tier0-audit-fixes.md  CONTEXT-tier1-audit-fixes.md  CONTEXT-tier2-audit-fixes.md  CONTEXT-tier3-audit-fixes.md  DEFERRED-COMPRESSION.md  DESIGN_ETHOS.md  DISCUSSION_LOG-agentic-memory-blockers.md  DISCUSSION_LOG-evolve-skill.md  DISCUSSION_LOG-relationship-engine.md  DISCUSSION_LOG-shared-llm-helper.md  DISCUSSION_LOG-skill-redesign.md  DISCUSSION_LOG-thread-retrieval.md  DISCUSSION_LOG-tier3-audit-fixes.md  PASSOFF-inspect-tui.md  PLAN-agentic-memory-blockers.md  PLAN-apsw-plugin.md  PLAN-evolve-skill.md  PLAN-relationship-engine.md  PLAN-risk-register-fixes.md  PLAN-shared-llm-helper.md  PLAN-skill-redesign.md  PLAN-tier0-audit-fixes.md  PLAN-tier1-audit-fixes.md  PLAN-tier2-audit-fixes.md  PLAN-tier3-audit-fixes.md  RISK-REGISTER.md  SPEC-inspect-tui.md  ideas.md
.headroom/: memory.db  memory_vectors.db
.planning/: PANEL-CONSENSUS.md  PASSOFF-memory-kind.md  PIPELINE-INSIGHT-REPORT.md  PROJECT.md  REQUIREMENTS.md  REVIEW-DATA-SCIENTIST.md  REVIEW-LLM-ENGINEER.md  REVIEW-NEUROSCIENTIST.md  REVIEW-SYNTHESIS.md  RFC-APSW-REMOVAL.md  ROADMAP.md  SPRINT-B-DECISIONS.md  STATE.md  TAXONOMY-AND-DEFERRED-PATTERNS.md  eval-baseline-pre.json  eval-baseline.json  observation-prompt-dedup-draft.md
.sisyphus/: glyph_revised_grammar.md
agent-sdk/: settings.json
backfill-output/: observations.db  summaries-app.jsonl  summaries-glop.jsonl  summaries-gpm.jsonl  summaries-zenpayroll.jsonl  summaries.jsonl
backtest-output/: consolidation-results-v1.jsonl  consolidation-results.jsonl  summaries.jsonl
core/: __init__.py  affect.py  autoresearch.py  card_validators.py  clustering.py  code_refs.py  codebook.py  coherence.py  compression.py  consolidator.py  crystallizer.py  cursors.py  database.py  decomposer.py  embeddings.py  eval_compile.py  extraction_affect.py  feedback.py  flags.py  graph.py  habituation.py  importance.py  ingest.py  issue_cards.py  lifecycle.py  linking.py  llm.py  llm_cache.py  manifest.py  mcp_server.py  models.py  native_memory.py  observability.py  orienting.py  promoter.py  prompts.py  question_lifecycle.py  reconsolidation.py  relevance.py  replay.py  (+25 more)
docs/: PROPOSAL.md  RUNBOOK-evolve.md  cognitive-modules.md  glyph_spec.md  relationship-engine-spec.md  transcript-analysis-design.md
eval/: README.md  __init__.py  capture_baseline.py  conftest.py  continuity_test.py  curation_audit.py  experiment.py  glyph_benchmark.py  glyph_results.json  injection_correlation_test.py  judge_eval.py  judges.py  lifecycle-viz.html  live_retrieval_test.py  longmemeval_adapter.py  longmemeval_test.py  metrics.py  metrics_test.py  needle_test.py  report.py  spontaneous_recall.py  staleness_test.py  validate_judge.py  verify_phase.py
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
hooks/: _render.py  _safe.py  append_observation.py  consolidate_cron.py  hooks.json  (+4 more)
(+379 files in other folders)
