[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memesis"
version = "0.1.0"
description = "Self-driven memory lifecycle with autonomous curation for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
eval = [
    "inspect-ai",
    "ragas",
    "deepeval",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "hooks*"]
