[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memesis"
version = "0.1.0"
description = "Self-driven memory lifecycle with autonomous curation for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "nltk>=3.8",
    "peewee>=3.17",
    "scikit-learn>=1.4",
    "sqlite-vec>=0.1.6",
    "apsw>=3.46",
    "openai>=1.50",
    "flask>=3.0",
    "mcp>=1.8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
eval = [
    "inspect-ai",
    "ragas",
    "deepeval",
]
dev = [
    "pytest>=8.0",
    "anyio>=4.0",
]

[project.scripts]
memesis-mcp = "core.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "hooks*"]

[tool.pyright]
pythonVersion = "3.10"
extraPaths = ["."]
exclude = ["backfill-output", ".venv", "**/__pycache__"]
typeCheckingMode = "off"
reportMissingImports = "none"
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportOptionalOperand = "none"
reportOptionalMemberAccess = "none"
reportIncompatibleVariableOverride = "none"
reportUnusedVariable = "none"
reportUnusedImport = "none"
