[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memesis"
version = "0.1.0"
description = "Self-driven memory lifecycle with autonomous curation for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "nltk>=3.8",
    "nrclex>=4.0",
    "peewee>=3.17",
    "scikit-learn>=1.4",
    "numpy>=1.24",
    "fastembed>=0.4",
    "openai>=1.50",
    "flask>=3.0",
    "mcp>=1.8.0",
    "pydantic>=2.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
eval = [
    "inspect-ai",
    "ragas",
    "deepeval",
]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-randomly>=3.15",
    "anyio>=4.0",
]

[project.scripts]
memesis-mcp = "core.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "hooks*"]

[tool.pytest.ini_options]
# `-n auto` runs the suite across all CPU cores via pytest-xdist.
# `--dist worksteal` keeps slow workers from blocking the tail of the run.
# `-m "not live_llm"` excludes any future tests that opt into live LLM calls;
# today there are no such tests in tests/ (eval/ harness is a separate path).
addopts = "-n auto --dist worksteal -m 'not live_llm'"
markers = [
    "live_llm: test issues real LLM calls (skipped by default; opt in with `-m live_llm`)",
]

[tool.pyright]
pythonVersion = "3.10"
extraPaths = ["."]
exclude = ["backfill-output", ".venv", "**/__pycache__"]
typeCheckingMode = "off"
reportMissingImports = "none"
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportOptionalOperand = "none"
reportOptionalMemberAccess = "none"
reportIncompatibleVariableOverride = "none"
reportUnusedVariable = "none"
reportUnusedImport = "warning"
reportUnusedParameter = "none"
reportUnusedFunction = "warning"
reportPrivateUsage = "none"
